# fastapi-hanko

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: c995ad9ad68a_first_revision.py
app/: config.py  main.py  utils.py
app/crud/: crud_item.py
app/db/: base.py  base_class.py
app/models/: item.py
app/routers/: item.py
app/schemas/: item.py
