[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Akachi Anabanti <akachi.anabanti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvicorn"], version = "^0.104.1"}
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
alembic = "^1.12.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
